made the game of life sample pretty

--- a/javascript-for-java-devs/game-of-life/src/game-of-life.html
+++ b/javascript-for-java-devs/game-of-life/src/game-of-life.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="../../../resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../../../resources/canoo.css" rel="stylesheet">
     <script type="text/javascript" src="conway1.js" ></script>
     <script type="application/javascript">
 
@@ -44,6 +46,20 @@
     </script>
 </head>
 <body onload="render(board);">
+
+<div id="header">
+    <div id="static-service-html">
+        <p class="util-links">
+            <a title="Follow Canoo on twitter" href="http://www.twitter.com/canoo" id="twitter">Twitter</a> |
+            <a title="Contact Canoo" href="http://www.canoo.com/service/contact">Contact</a> |
+            <a title="Canoo Website Imprint" href="http://www.canoo.com/service/imprint">Imprint</a>
+        </p>
+    </div>
+    <div id="static-header-html">
+        <div id="logo"><a title="Canoo, your provider for business web solutions" href="http://www.canoo.com">Canoo</a></div>
+    </div>
+</div>
+
 <div>
     <canvas id="canvas" width="350" height="350"></canvas></div>
 <div>
