--- a/javascript-for-java-devs/game-of-life/src/game-of-life.html
+++ b/javascript-for-java-devs/game-of-life/src/game-of-life.html
@@ -7,7 +7,7 @@
     <title>Canoo - Delivering End-User Happiness - Game of Life Demo</title>
     <link href="../../../resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="../../../resources/canoo.css" rel="stylesheet">
-    <script type="text/javascript" src="conway1.js" ></script>
+    <script type="text/javascript" src="conwayFI.js" ></script>
     <script type="text/javascript" src="conway00.js" ></script>
     <script type="text/javascript" src="conwayFP.js" ></script>
     <script type="application/javascript">
@@ -51,12 +51,13 @@
         var render1, render2, render3;
 
         var start1 = function() {
-            var gameV1 = function (board) { return GameOfLife1.advance(board); };
+            var game = createGameFI();
+            var gameV1 = function (board) { return game.advance(board); };
             render1 = createRenderer("rgb(200,0,0)", "rgb(0,0,0)", 'canvas1', gameV1);
             render1();
         };
         var start2 = function() {
-            var game = createGame();
+            var game = createGameFP();
             var gameV2 = function (board) { return game(board); };
             render2 = createRenderer("rgb(0,100,0)", "rgb(0,0,0)", 'canvas2', gameV2);
             render2();
@@ -71,7 +72,7 @@
                 return game.render();
             };
             render3 = createRenderer("rgb(0,0,205)", "rgb(0,0,0)", 'canvas3', gameV3);
-            render3 ();
+            render3();
         };
 
     </script>
@@ -91,35 +92,43 @@
     </div>
 </div>
 
-    <div style="float: left">
-        <div>
-            <canvas id="canvas1" width="350" height="350"></canvas></div>
-        <div>
-            <input type="button" name="Reset" value="Reset" onclick="start1();">
-            <input type="button" name="Step" value="Step" onclick="render1();">
-            <input type="button" name="Play" value="Play" onclick="interval1 = setInterval(function() {render1();}, 500); " >
-            <input type="button" name="Stop" value="Stop" onclick="clearInterval(interval1); " >
-        </div>
+<h3><a href="http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's Game of Life</a> implemented 3 Different Ways</h3>
+<div style="float: left; border-left: 1px solid #eee;">
+    <div>
+        <canvas id="canvas1" width="350" height="350"></canvas>
     </div>
-    <div style="float: left">
-        <div>
-            <canvas id="canvas2" width="350" height="350"></canvas></div>
-        <div>
-            <input type="button" name="Reset" value="Reset" onclick="start2();">
-            <input type="button" name="Step" value="Step" onclick="render2();">
-            <input type="button" name="Play" value="Play" onclick="interval2 = setInterval(function() {render2();}, 500); " >
-            <input type="button" name="Stop" value="Stop" onclick="clearInterval(interval2); " >
-        </div>
+    <div style="padding-left: 10px; width:350px;">
+        Implemented using a Functional Inheritance pattern from JavaScript the good parts. Source
     </div>
-    <div style="float: left">
-        <div>
-            <canvas id="canvas3" width="350" height="350"></canvas></div>
-        <div>
-            <input type="button" name="Reset" value="Reset" onclick="start3();">
-            <input type="button" name="Step" value="Step" onclick="render3();">
-            <input type="button" name="Play" value="Play" onclick="interval3 = setInterval(function() {render3();}, 500); " >
-            <input type="button" name="Stop" value="Stop" onclick="clearInterval(interval3); " >
-        </div>
+    <div style="padding-left: 10px;">
+        <input class="btn btn-small" type="button" name="Reset" value="Reset" onclick="start1();">
+        <input class="btn btn-small" type="button" name="Step" value="Step" onclick="render1();">
+        <input class="btn btn-small" type="button" name="Play" value="Play" onclick="interval1 = setInterval(function() {render1();}, 500); " >
+        <input class="btn btn-small" type="button" name="Stop" value="Stop" onclick="clearInterval(interval1); " >
     </div>
+</div>
+<div style="float: left; border-left: 1px solid #eee;">
+    <div>
+        <canvas id="canvas2" width="350" height="350"></canvas>
+    </div>
+    <div style="padding-left: 10px; width:350px;">Implemented using a Functional Inheritenace pattern from JavaScript the good parts</div>
+    <div style="padding-left: 10px;">
+        <input class="btn btn-small"type="button" name="Reset" value="Reset" onclick="start2();">
+        <input class="btn btn-small"type="button" name="Step" value="Step" onclick="render2();">
+        <input class="btn btn-small"type="button" name="Play" value="Play" onclick="interval2 = setInterval(function() {render2();}, 500); " >
+        <input class="btn btn-small"type="button" name="Stop" value="Stop" onclick="clearInterval(interval2); " >
+    </div>
+</div>
+<div style="float: left; border-left: 1px solid #eee;">
+    <div>
+        <canvas id="canvas3" width="350" height="350"></canvas></div>
+    <div style="padding-left: 10px; width:350px;">Implemented using a Functional Inheritenace pattern from JavaScript the good parts</div>
+    <div style="padding-left: 10px;">
+        <input class="btn btn-small"type="button" name="Reset" value="Reset" onclick="start3();">
+        <input class="btn btn-small"type="button" name="Step" value="Step" onclick="render3();">
+        <input class="btn btn-small"type="button" name="Play" value="Play" onclick="interval3 = setInterval(function() {render3();}, 500); " >
+        <input class="btn btn-small"type="button" name="Stop" value="Stop" onclick="clearInterval(interval3); " >
+    </div>
+</div>
 </body>
 </html>
