Added HTML and renamed file

--- a/javascript-for-java-devs/game-of-life/src/game-of-life.html
+++ b/javascript-for-java-devs/game-of-life/src/game-of-life.html
@@ -8,7 +8,7 @@
     <link href="../../../resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="../../../resources/canoo.css" rel="stylesheet">
     <script type="text/javascript" src="conwayFI.js" ></script>
-    <script type="text/javascript" src="conway00.js" ></script>
+    <script type="text/javascript" src="conwayOO.js" ></script>
     <script type="text/javascript" src="conwayFP.js" ></script>
     <script type="application/javascript">
 
@@ -98,7 +98,7 @@
         <canvas id="canvas1" width="350" height="350"></canvas>
     </div>
     <div style="padding-left: 10px; width:350px;">
-        Implemented using a Functional Inheritance pattern from JavaScript the good parts. Source
+        Implemented using a Functional Inheritance pattern from JavaScript the good parts. <a href="https://github.com/canoo/team-javascript/blob/master/javascript-for-java-devs/game-of-life/src/conwayFI.js">Source</a>
     </div>
     <div style="padding-left: 10px;">
         <input class="btn btn-small" type="button" name="Reset" value="Reset" onclick="start1();">
@@ -111,7 +111,9 @@
     <div>
         <canvas id="canvas2" width="350" height="350"></canvas>
     </div>
-    <div style="padding-left: 10px; width:350px;">Implemented using a Functional Inheritenace pattern from JavaScript the good parts</div>
+    <div style="padding-left: 10px; width:350px;">
+        Implemented using a Functional Programming style. <a href="https://github.com/canoo/team-javascript/blob/master/javascript-for-java-devs/game-of-life/src/conwayFP.js">Source</a>
+    </div>
     <div style="padding-left: 10px;">
         <input class="btn btn-small"type="button" name="Reset" value="Reset" onclick="start2();">
         <input class="btn btn-small"type="button" name="Step" value="Step" onclick="render2();">
@@ -121,8 +123,11 @@
 </div>
 <div style="float: left; border-left: 1px solid #eee;">
     <div>
-        <canvas id="canvas3" width="350" height="350"></canvas></div>
-    <div style="padding-left: 10px; width:350px;">Implemented using a Functional Inheritenace pattern from JavaScript the good parts</div>
+        <canvas id="canvas3" width="350" height="350"></canvas>
+    </div>
+    <div style="padding-left: 10px; width:350px;">
+        Implemented using an Object Oriented style. <a href="https://github.com/canoo/team-javascript/blob/master/javascript-for-java-devs/game-of-life/src/conwayOO.js">Source</a>
+    </div>
     <div style="padding-left: 10px;">
         <input class="btn btn-small"type="button" name="Reset" value="Reset" onclick="start3();">
         <input class="btn btn-small"type="button" name="Step" value="Step" onclick="render3();">
